[package]
name = "lowdash"
version = "0.2.2"
authors = ["Tirtadwipa Manunggal <tirtadwipa.manunggal@gmail.com>"]
description = "A Lodash inspired utility library to manipulate array and object"
repository = "https://github.com/liberocks/lowdash"
readme = "README.md"
license = "MIT"
categories = ["rust-patterns"]
keywords = ["rust-lodash", "lodash", "utility", "js", "javascript"]
edition = "2021"

[dependencies]