[package]
name = "lowdash"
version = "0.5.4"
authors = ["Tirtadwipa Manunggal <tirtadwipa.manunggal@gmail.com>"]
description = "A Lodash inspired utility library to manipulate array and object for Rust"
repository = "https://github.com/liberocks/lowdash"
readme = "README.md"
license = "MIT"
categories = ["rust-patterns"]
keywords = ["rust-lodash", "lodash", "utility"]
edition = "2021"
autobenches = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
